fix missing margin

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -25,6 +25,7 @@ a{
 
 h1{
 	visibility: hidden;
+	margin: 0;
 	line-height: 0;
 }
 
